add url shorthand to gitconfig example to force https to get around corporate firewalls

--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -190,7 +190,9 @@
 [url "https://github.com/jppferguson/"]
   insteadOf = "ghjf://"
   pushInsteadOf = "ghjf://"
-
+# forces https to get around corporate firewalls
+[url "https://"]
+    insteadOf = git://
 
 [push]
     # See `git help config` (search for push.default)
