add core.ignorecase = false to sample gitconfig

--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -130,6 +130,8 @@
     safecrlf = warn
     # Set default git editor
     editor = vim
+    # don't ignore case
+    ignorecase = false
 
 
 [color]
