Tidy up sublime preferences and install script, include Package Control file so packages are automatically installed

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ git/gitconfig.symlink
 # dotfile vendor libs
 vendor
 vendor/*
+
+# sublime settings
+sublime/User/*
+!sublime/User/*.sublime-settings
+!sublime/User/*.sublime-keymap
