Create new topical `update.sh` files, create `script/update` which loops through them all and update `dot` to run them too

--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -39,6 +39,8 @@
     s = status -s -u
     # Show remotes a little more verbose with url after name
     rv = remote -v
+    # Use instead of pull - no risk of merge conflicts
+    up = !git remote update -p; git merge --ff-only @{u}
 
 
     #############
