Remove log util as its not used and pointless

--- a/hammerspoon/hammerspoon.symlink/config.lua.example
+++ b/hammerspoon/hammerspoon.symlink/config.lua.example
@@ -9,7 +9,7 @@ config.bindings = {} -- Key bindings
 
 
 -- Logging
-config.global.loglevel = 'debug'
+config.global.loglevel = 'warning'
 
 
 -- Overide messages
