New hazel task to clean up desktop every week

--- a/hammerspoon/hammerspoon.symlink/config.lua.example
+++ b/hammerspoon/hammerspoon.symlink/config.lua.example
@@ -49,6 +49,7 @@ config.global['window.management'] = {
 -- Hazel
 config.global['system.hazel'] = {
   watchers = {
+    desktop = { enabled = true },
     downloads = { enabled = true },
     downloadsArchive = { enabled = true },
   }
