--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "test/libs/bats-file"]
 	path = test/libs/bats-file
 	url = https://github.com/ztombol/bats-file
+[submodule "z/lib"]
+	path = z/lib
+	url = https://github.com/rupa/z
