--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ atom/atom.symlink/.node-gyp
 atom/atom.symlink/blob-store
 atom/atom.symlink/compile-cache
 atom/atom.symlink/packages
+atom/atom.symlink/recovery
 atom/atom.symlink/storage
 atom/atom.symlink/themes
 
