Update VSCode install and add settings

--- a/vs-code/User/settings.json
+++ b/vs-code/User/settings.json
@@ -1,12 +1,17 @@
 {
     "editor.fontFamily": "'Operator Mono', 'Fira Code', Monaco, monospace",
-    "editor.fontSize": 12,
     "editor.fontLigatures": true,
+    "editor.fontSize": 12,
     "editor.lineHeight": 24,
     "editor.minimap.enabled": true,
     "editor.scrollBeyondLastLine": false,
     "editor.tabSize": 2,
-    "workbench.colorTheme": "Material Theme",
-    "workbench.iconTheme": "file-icons",
+    "explorer.confirmDelete": false,
+    "projectManager.confirmSwitchOnActiveWindow": "always",
+    "projectManager.groupList": true,
+    "projectManager.openInNewWindowWhenClickingInStatusBar": true,
+    "projectManager.projectsLocation": "~/Sites/Workspaces/",
     "window.zoomLevel": 1,
+    "workbench.colorTheme": "Night Owl",
+    "workbench.iconTheme": "file-icons",
 }
