--- a/.github/workflow/tests.yml
+++ b/.github/workflow/tests.yml
@@ -5,7 +5,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Clone this repository
-        uses: actions/checkout@v3
-      - name: Run tests
-        run: sh src/script/test
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - run: sh src/script/test
