--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,4 +7,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+      - name: Setup Bats and bats libs
+         id: setup-bats
+         uses: bats-core/bats-action@3.0.0
       - run: sh src/script/test
